# Extensions-on-LatentMAS-Paper

./: README.md  pyproject.toml
examples/: latentmas_stear_hook.py
latentmas_stear/: __init__.py  core.py  integration.py
patches/: upstream_latentmas_stear.patch
tests/: test_stear_core.py
