[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "latentmas-stear"
version = "0.1.0"
description = "STEAR-style latent-memory intervention utilities for LatentMAS reasoning experiments."
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
packages = ["latentmas_stear"]
